# lacona

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: CONTRIBUTING.md  INSTALL.md  USAGE.md
examples/dxcompiler_proxy/: README.md  dxcompiler_proxy.c  dxcompiler_proxy.def
examples/ffmpeg_proxy/: ffmpeg_proxy.c  ffmpeg_proxy.def
examples/libiconv_proxy/: libiconv_proxy.c  libiconv_proxy.def
lacuna/: __init__.py  agent.py  cli.py  models.py  orchestrator.py
lacuna/data/: known_dlls_win11.txt
lacuna/modules/: canary.py  dynamic_monitor.py  hijacklibs.py  proxy_generator.py  remote_validator.py  scorer.py  static_analyzer.py  target_acquisition.py  windows_enumeration.py
